[package]
name = "storiqa_crypto"
version = "0.1.0"
authors = ["alex <karasev.alexey@gmail.com>"]

[lib]
name = "storiqa_crypto_lib"
path = "src/lib.rs"

[dependencies]
exonum = "0.6.0"
iron = "0.6.0"
bodyparser = "0.8.0"
router = "0.6.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0.0"
failure = "0.1.1"
